--- a/MinFangst/MFDashboardViewController.xib
+++ b/MinFangst/MFDashboardViewController.xib
@@ -113,6 +113,7 @@
 						<string key="NSFrame">{{20, 92}, {58, 58}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
